--- a/docs/source/llms/rag/notebooks/question-generation-retrieval-evaluation.ipynb
+++ b/docs/source/llms/rag/notebooks/question-generation-retrieval-evaluation.ipynb
@@ -104,7 +104,6 @@
    ],
    "source": [
     "import os\n",
-    "import pickle\n",
     "from langchain.docstore.document import Document\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
@@ -113,14 +112,14 @@
     "\n",
     "# For scraping\n",
     "import requests\n",
-    "import urllib\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# For data analysis and visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import sklearn\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.manifold import TSNE\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random"
@@ -1203,10 +1202,10 @@
     "embeddings = OpenAIEmbeddings()\n",
     "question_embeddings = embeddings.embed_documents(questions_to_embed)\n",
     "# PCA on embeddings to reduce to 50-dim\n",
-    "pca = sklearn.decomposition.PCA(n_components=50)\n",
+    "pca = PCA(n_components=50)\n",
     "question_embeddings_50 = pca.fit_transform(question_embeddings)\n",
     "# TSNE on embeddings to reduce to 2-dim\n",
-    "tsne = sklearn.manifold.TSNE(n_components=2)\n",
+    "tsne = TSNE(n_components=2)\n",
     "lower_dim_embeddings = tsne.fit_transform(question_embeddings_50)"
    ]
   },
