--- a/docs/source/llms/transformers/tutorials/text-generation/text-generation.ipynb
+++ b/docs/source/llms/transformers/tutorials/text-generation/text-generation.ipynb
@@ -268,6 +268,7 @@
     "        artifact_path=\"text_generator\",\n",
     "        input_example=input_example,\n",
     "        signature=signature,\n",
+    "        example_no_conversion=True,\n",
     "        # Uncomment the following line to save the model in 'reference-only' mode:\n",
     "        # save_pretrained=False,\n",
     "    )"
