#12404 fixing typos pomote/Pomote to promote/Promote (2)
Signed-off-by: Rudolf Braun <braun.ru@outlook.de>

--- a/mlflow/server/js/src/i18n/default/en.json
+++ b/mlflow/server/js/src/i18n/default/en.json
@@ -13,7 +13,7 @@
   },
   "+RYBrq": {
     "defaultMessage": "Promote model",
-    "description": "Button text to pomote the model to a different registered model"
+    "description": "Button text to promote the model to a different registered model"
   },
   "+dGAnC": {
     "defaultMessage": "Preview",
