updated gpt-3.5-turbo references to gpt-4o-mini
Signed-off-by: Otutu Chinedu Kingsley <56305995+otutukingsley@users.noreply.github.com>

--- a/docs/source/llms/openai/notebooks/openai-quickstart.ipynb
+++ b/docs/source/llms/openai/notebooks/openai-quickstart.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "- **MLflow Experiments**: Our first step involves creating or reusing an [MLflow experiment](https://www.mlflow.org/docs/latest/tracking/tracking-api.html#organizing-runs-in-experiments) named \"Lyrics Corrector\". Experiments in MLflow are crucial for organizing and tracking different model runs, along with their associated data and parameters.\n",
     "\n",
-    "- **Model Logging**: Within an [MLflow run](https://www.mlflow.org/docs/latest/tracking.html#tracking-runs), we log our model, specifying details such as the model type (`gpt-3.5-turbo-instruct`), the task it's intended for (`openai.completions`), and the custom prompt we've designed. This action ensures that MLflow accurately captures the essence and operational context of our model.\n",
+    "- **Model Logging**: Within an [MLflow run](https://www.mlflow.org/docs/latest/tracking.html#tracking-runs), we log our model, specifying details such as the model type (`gpt-4o-mini-instruct`), the task it's intended for (`openai.completions`), and the custom prompt we've designed. This action ensures that MLflow accurately captures the essence and operational context of our model.\n",
     "\n",
     "- **Model Signature**: Here, we define the input and output schema for our model. We expect a string as input (the misheard lyric) and output a string (the corrected lyric with a humorous explanation). Additional parameters like `max_tokens`, `temperature`, and `best_of` are set to control the model's text generation process.\n",
     "\n",
@@ -215,7 +215,7 @@
     "# Start our run and log our model\n",
     "with mlflow.start_run():\n",
     "    model_info = mlflow.openai.log_model(\n",
-    "        model=\"gpt-3.5-turbo-instruct\",\n",
+    "        model=\"gpt-4o-mini-instruct\",\n",
     "        task=openai.completions,\n",
     "        artifact_path=\"model\",\n",
     "        prompt=lyrics_prompt,\n",
@@ -382,7 +382,7 @@
     "# Start our run and log our model\n",
     "with mlflow.start_run():\n",
     "    model_info = mlflow.openai.log_model(\n",
-    "        model=\"gpt-3.5-turbo-instruct\",\n",
+    "        model=\"gpt-4o-mini-instruct\",\n",
     "        task=openai.completions,\n",
     "        artifact_path=\"model\",\n",
     "        prompt=improved_lyrics_prompt,\n",
@@ -464,7 +464,7 @@
     "  \n",
     "- **Simplifying AI Model Management with MLflow**: MLflow's capacity to log models, manage experiments, and handle the nuances of the machine learning lifecycle has been indispensable. It simplifies the complex process of managing and deploying AI models, making these tasks more accessible to both developers and data scientists.\n",
     "\n",
-    "- **Leveraging OpenAI's Advanced Models**: The seamless integration of OpenAI's GPT models within MLflow demonstrates how state-of-the-art AI technology can be applied in real-world scenarios. Our Lyrics Corrector example, built on the GPT-3.5-turbo model, illustrates just one of many potential applications that blend creativity, humor, and advanced language understanding.\n",
+    "- **Leveraging OpenAI's Advanced Models**: The seamless integration of OpenAI's GPT models within MLflow demonstrates how state-of-the-art AI technology can be applied in real-world scenarios. Our Lyrics Corrector example, built on the gpt-4o-mini model, illustrates just one of many potential applications that blend creativity, humor, and advanced language understanding.\n",
     "\n",
     "- **Advantages of MLflow's pyfunc Implementation**: The pyfunc implementation in MLflow allows for flexible and straightforward access to advanced models like OpenAI's GPT. It enables users to deploy these models as generic Python functions, greatly enhancing their usability and integration into diverse applications.\n",
     "\n",
