--- a/docs/source/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
+++ b/docs/source/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
@@ -190,7 +190,7 @@
     "with mlflow.start_run() as run:\n",
     "    system_prompt = \"Answer the following question in two sentences\"\n",
     "    basic_qa_model = mlflow.openai.log_model(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
+    "        model=\"gpt-4o-mini\",\n",
     "        task=openai.chat.completions,\n",
     "        artifact_path=\"model\",\n",
     "        messages=[\n",
@@ -1205,7 +1205,7 @@
     "with mlflow.start_run() as run:\n",
     "    system_prompt = \"Answer the following question using extreme formality.\"\n",
     "    professional_qa_model = mlflow.openai.log_model(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
+    "        model=\"gpt-4o-mini\",\n",
     "        task=openai.chat.completions,\n",
     "        artifact_path=\"model\",\n",
     "        messages=[\n",
