--- a/examples/llms/RAG/question-generation-retrieval-evaluation.ipynb
+++ b/examples/llms/RAG/question-generation-retrieval-evaluation.ipynb
@@ -643,7 +643,7 @@
     "\n",
     "The prompt below instructs the LLM to generate a question for each given chunk, and also generate an answer to the question to make it easier to do human validation. Also, return the results in a structured format.\n",
     "\n",
-    "This example uses OpenAI's gpt-3.5-turbo model to generate the questions, you can replace it with the LLM that works best for your use case."
+    "This example uses OpenAI's gpt-4o-mini model to generate the questions, you can replace it with the LLM that works best for your use case."
    ]
   },
   {
@@ -700,7 +700,7 @@
     "\n",
     "    return cached_openai_ChatCompletion_create(\n",
     "        messages=messages,\n",
-    "        model=\"gpt-3.5-turbo\",\n",
+    "        model=\"gpt-4o-mini\",\n",
     "        functions=[submit_function],\n",
     "        function_call=\"auto\",\n",
     "        temperature=0.0,\n",
@@ -759,7 +759,7 @@
        "{'id': 'chatcmpl-8NPsIJQZYDP4aqiWEUlUyLakv3lyR',\n",
        " 'object': 'chat.completion',\n",
        " 'created': 1700591698,\n",
-       " 'model': 'gpt-3.5-turbo-0613',\n",
+       " 'model': 'gpt-4o-mini-0613',\n",
        " 'choices': [{'index': 0,\n",
        "   'message': {'role': 'assistant',\n",
        "    'content': None,\n",
