--- a/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
+++ b/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
@@ -10,7 +10,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "<a href=\"https://raw.githubusercontent.com/mlflow/mlflow/master/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb\" class=\"notebook-download-btn\"><i class=\"fas fa-download\"></i>Download this Notebook</a><br>"
@@ -38,43 +38,6 @@
     "### Setup\n",
     "\n",
     "First, we must ensure we have the required dependecies and environment variables. By default, LlamaIndex uses OpenAI as the source for LLMs and embeding models, so we'll do the same. Let's start by installing the requisite libraries and providing an OpenAI API key.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found existing installation: mlflow 2.14.3\n",
-      "Uninstalling mlflow-2.14.3:\n",
-      "  Successfully uninstalled mlflow-2.14.3\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip uninstall mlflow -y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install git+https://github.com/mlflow/mlflow.git llama_index -q"
    ]
   },
   {
@@ -110,7 +73,7 @@
     "\n",
     "os.environ[\n",
     "    \"OPENAI_API_KEY\"\n",
-    "] = \"sdk-...\"  # NOTE: this is for demo purposes - plaintext tokens are not secure! d"
+    "] = \"sdk-...\"  # NOTE: this is for demo purposes - plaintext tokens are not secure!"
    ]
   },
   {
@@ -165,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "ChatResponse(message=ChatMessage(role=<MessageRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', additional_kwargs={}), raw={'id': 'chatcmpl-9oFFmuxPSulYJYDf0S1JX0YDOb5I0', 'choices': [Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Hello! How can I assist you today?', role='assistant', function_call=None, tool_calls=None))], 'created': 1721762062, 'model': 'gpt-3.5-turbo-0125', 'object': 'chat.completion', 'service_tier': None, 'system_fingerprint': None, 'usage': CompletionUsage(completion_tokens=9, prompt_tokens=8, total_tokens=17)}, delta=None, logprobs=None, additional_kwargs={})"
+       "ChatResponse(message=ChatMessage(role=<MessageRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', additional_kwargs={}), raw={'id': 'chatcmpl-9oHK0ZxkB1SrjRhsq3TuNIBIwIrmO', 'choices': [Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Hello! How can I assist you today?', role='assistant', function_call=None, tool_calls=None))], 'created': 1721770012, 'model': 'gpt-3.5-turbo-0125', 'object': 'chat.completion', 'service_tier': None, 'system_fingerprint': None, 'usage': CompletionUsage(completion_tokens=9, prompt_tokens=8, total_tokens=17)}, delta=None, logprobs=None, additional_kwargs={})"
       ]
      },
      "execution_count": 3,
@@ -190,7 +153,7 @@
      "output_type": "stream",
      "text": [
       "------------- Example Document used to Enrich LLM Context -------------\n",
-      "Doc ID: cb744dfc-7605-41c6-8004-07bfd2e1c097\n",
+      "Doc ID: 0c8beb53-6433-426b-bd14-20776ef497c4\n",
       "Text: Context LLMs are a phenomenal piece of technology for knowledge\n",
       "generation and reasoning. They are pre-trained on large amounts of\n",
       "publicly available data. How do we best augment LLMs with our own\n",
@@ -199,13 +162,13 @@
       "comes in. Ll...\n",
       "\n",
       "------------- Example Query Engine -------------\n",
-      "LlamaIndex is a \"data framework\" designed to assist in building LLM apps by providing tools such as data connectors for various data sources, ways to structure data for easy use with LLMs, an advanced retrieval/query interface, and integrations with different application frameworks. It caters to both beginner and advanced users, offering a high-level API for simple data ingestion and querying, as well as lower-level APIs for customization and extension of different modules to suit specific needs.\n",
+      "LlamaIndex is a \"data framework\" designed to assist in building LLM apps by offering tools such as data connectors for various data sources, ways to structure data for easy use with LLMs, an advanced retrieval/query interface, and integrations with different application frameworks. It caters to both beginner and advanced users, providing a high-level API for easy data ingestion and querying, as well as lower-level APIs for customization and extension of modules to suit specific requirements.\n",
       "\n",
       "------------- Example Chat Engine  -------------\n",
-      "LlamaIndex is a data framework designed to assist in building LLM apps by offering tools such as data connectors for various data sources, ways to structure data for easy use with LLMs, an advanced retrieval/query interface, and integrations with different application frameworks. It caters to both beginner and advanced users with a high-level API for easy data ingestion and querying, as well as lower-level APIs for customization and extension of different modules to suit individual needs.\n",
+      "LlamaIndex is a data framework designed to assist in building LLM apps. It offers tools such as data connectors for various data sources, ways to structure data for easy use with LLMs, an advanced retrieval/query interface, and integrations with different application frameworks. It caters to both beginner and advanced users, providing a high-level API for easy data ingestion and querying, as well as lower-level APIs for customization and extension of different modules to suit specific needs.\n",
       "\n",
       "------------- Example Retriever   -------------\n",
-      "[NodeWithScore(node=TextNode(id_='00758303-125e-42a8-936f-4ffc759bf854', embedding=None, metadata={'filename': 'README.md', 'category': 'codebase'}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={<NodeRelationship.SOURCE: '1'>: RelatedNodeInfo(node_id='cb744dfc-7605-41c6-8004-07bfd2e1c097', node_type=<ObjectType.DOCUMENT: '4'>, metadata={'filename': 'README.md', 'category': 'codebase'}, hash='3183371414f6a23e9a61e11b45ec45f808b148f9973166cfed62226e3505eb05')}, text='Context\\nLLMs are a phenomenal piece of technology for knowledge generation and reasoning.\\nThey are pre-trained on large amounts of publicly available data.\\nHow do we best augment LLMs with our own private data?\\nWe need a comprehensive toolkit to help perform this data augmentation for LLMs.\\n\\nProposed Solution\\nThat\\'s where LlamaIndex comes in. LlamaIndex is a \"data framework\" to help\\nyou build LLM  apps. It provides the following tools:\\n\\nOffers data connectors to ingest your existing data sources and data formats\\n(APIs, PDFs, docs, SQL, etc.)\\nProvides ways to structure your data (indices, graphs) so that this data can be\\neasily used with LLMs.\\nProvides an advanced retrieval/query interface over your data:\\nFeed in any LLM input prompt, get back retrieved context and knowledge-augmented output.\\nAllows easy integrations with your outer application framework\\n(e.g. with LangChain, Flask, Docker, ChatGPT, anything else).\\nLlamaIndex provides tools for both beginner users and advanced users.\\nOur high-level API allows beginner users to use LlamaIndex to ingest and\\nquery their data in 5 lines of code. Our lower-level APIs allow advanced users to\\ncustomize and extend any module (data connectors, indices, retrievers, query engines,\\nreranking modules), to fit their needs.', mimetype='text/plain', start_char_idx=1, end_char_idx=1279, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n'), score=0.850998849877966)]\n"
+      "[NodeWithScore(node=TextNode(id_='9f98ba9f-5fc2-4c53-b275-97597b0d5983', embedding=None, metadata={'filename': 'README.md', 'category': 'codebase'}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={<NodeRelationship.SOURCE: '1'>: RelatedNodeInfo(node_id='0c8beb53-6433-426b-bd14-20776ef497c4', node_type=<ObjectType.DOCUMENT: '4'>, metadata={'filename': 'README.md', 'category': 'codebase'}, hash='3183371414f6a23e9a61e11b45ec45f808b148f9973166cfed62226e3505eb05')}, text='Context\\nLLMs are a phenomenal piece of technology for knowledge generation and reasoning.\\nThey are pre-trained on large amounts of publicly available data.\\nHow do we best augment LLMs with our own private data?\\nWe need a comprehensive toolkit to help perform this data augmentation for LLMs.\\n\\nProposed Solution\\nThat\\'s where LlamaIndex comes in. LlamaIndex is a \"data framework\" to help\\nyou build LLM  apps. It provides the following tools:\\n\\nOffers data connectors to ingest your existing data sources and data formats\\n(APIs, PDFs, docs, SQL, etc.)\\nProvides ways to structure your data (indices, graphs) so that this data can be\\neasily used with LLMs.\\nProvides an advanced retrieval/query interface over your data:\\nFeed in any LLM input prompt, get back retrieved context and knowledge-augmented output.\\nAllows easy integrations with your outer application framework\\n(e.g. with LangChain, Flask, Docker, ChatGPT, anything else).\\nLlamaIndex provides tools for both beginner users and advanced users.\\nOur high-level API allows beginner users to use LlamaIndex to ingest and\\nquery their data in 5 lines of code. Our lower-level APIs allow advanced users to\\ncustomize and extend any module (data connectors, indices, retrievers, query engines,\\nreranking modules), to fit their needs.', mimetype='text/plain', start_char_idx=1, end_char_idx=1279, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n'), score=0.850998849877966)]\n"
      ]
     }
    ],
@@ -256,7 +219,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/07/23 15:14:30 INFO mlflow.llama_index.serialize_objects: API key(s) will be removed from the global Settings object during serialization to protect against key leakage. At inference time, the key(s) must be passed as environment variables.\n",
+      "2024/07/23 17:27:03 INFO mlflow.llama_index.serialize_objects: API key(s) will be removed from the global Settings object during serialization to protect against key leakage. At inference time, the key(s) must be passed as environment variables.\n",
       "/Users/michael.berk/opt/anaconda3/envs/mlflow-dev/lib/python3.8/site-packages/_distutils_hack/__init__.py:26: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
       "Successfully registered model 'my_llama_index_vector_store'.\n",
@@ -266,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bb1978c0d8248bbac1e5bbf0d28a842",
+       "model_id": "d437411c07334e11b0135be1314ee859",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique identifier for the model location for loading: runs:/4c13c516964a4afbbe507342ac54c0f1/llama_index\n"
+      "Unique identifier for the model location for loading: runs:/ba9450eeb59f49e78b2595436ce1291b/llama_index\n"
      ]
     }
    ],
@@ -338,13 +301,13 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/07/23 15:14:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/07/23 17:27:17 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f5ff10ac2484aa599b3ac817ed2cf0f",
+       "model_id": "8e8330c973ff4401aa0c535128a8ffea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,13 +322,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/07/23 15:14:45 WARNING mlflow.pyfunc: Calling `spark_udf()` with `env_manager=\"local\"` does not recreate the same environment that was used during training, which may lead to errors or inaccurate predictions. We recommend specifying `env_manager=\"conda\"`, which automatically recreates the environment that was used to train the model and performs inference in the recreated environment.\n"
+      "2024/07/23 17:27:18 WARNING mlflow.pyfunc: Calling `spark_udf()` with `env_manager=\"local\"` does not recreate the same environment that was used during training, which may lead to errors or inaccurate predictions. We recommend specifying `env_manager=\"conda\"`, which automatically recreates the environment that was used to train the model and performs inference in the recreated environment.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "453f89ca81684a8d9a33631420897a08",
+       "model_id": "fd40660e1c6c4d8dbfd8d26bc630b688",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +343,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/07/23 15:14:45 INFO mlflow.models.flavor_backend_registry: Selected backend for flavor 'python_function'\n",
+      "2024/07/23 17:27:19 INFO mlflow.models.flavor_backend_registry: Selected backend for flavor 'python_function'\n",
       "                                                                                \r"
      ]
     },
@@ -467,28 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"1000\"\n",
-       "            height=\"600\"\n",
-       "            src=\"http://localhost:5000\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa062304430>"
+       "<subprocess.Popen at 0x7fcd0076a220>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,9 +454,17 @@
     "mlflow_ui_command = [\"mlflow\", \"ui\", \"--port\", \"5000\"]\n",
     "subprocess.Popen(\n",
     "    mlflow_ui_command, stdout=subprocess.PIPE, stderr=subprocess.PIPE, preexec_fn=os.setsid\n",
-    ")\n",
-    "\n",
-    "# Render the MLflow UI in an IFrame\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wait for the MLflow server to start then run the following command\n",
+    "# Note that cached results don't render, so you need to run this to see the UI\n",
     "IFrame(src=\"http://localhost:5000\", width=1000, height=600)"
    ]
   },
