--- a/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
+++ b/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
@@ -502,7 +502,8 @@
    "source": [
     "We also created a record of the model in the model registry. By simply specifying \n",
     "`registered_model_name` and `input_example` when logging the model, we get robust signature\n",
-    "inference and an instance in the model registry, as shown below."
+    "inference and an instance in the model registry, as shown below. Navigate to the registered model by \n"
+    "selecting `Models` tab from the navigation bar and click on the model `my_llama_index_vector_store`\n"
    ]
   },
   {
