--- a/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
+++ b/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
@@ -272,7 +272,7 @@
     "The below code demonstrates three core types of inference that can be done with the loaded model.\n",
     "\n",
     "1. **Load and Perform Inference via LlamaIndex:** This method loads the model using `mlflow.llama_index.load_model` and performs direct querying, chat, or retrieval. It is ideal when you want to leverage the full capabilities of the underlying llama index object.\n",
-    "2. **Load and Perform Inference via MLflow PyFunc:** This method loads the model using `mlflow.pyfunc.load_model`, enabling model predictions in a generic PyFunc format. It is useful for serving-based implementations and, notably, only supports the inference type defined at logging time. \n",
+    "2. **Load and Perform Inference via MLflow PyFunc:** This method loads the model using `mlflow.pyfunc.load_model`, enabling model predictions in a generic PyFunc format, with the engine type specified at logging time. It is useful for evaluating the model with `mlflow.evaluate` or deploying the model for serving. \n",
     "3. **Load and Perform Inference via MLflow Spark UDF:** This method uses `mlflow.pyfunc.spark_udf` to load the model as a Spark UDF, facilitating distributed inference across large datasets in a Spark DataFrame. It is ideal for handling large-scale data processing and, like with PyFunc inference, only supports the engine type defined when logging.\n"
    ]
   },
