--- a/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
+++ b/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
@@ -407,7 +407,7 @@
     "print(query_response)\n",
     "\n",
     "print(\"\\n------------- Inference via MLflow PyFunc -------------\")\n",
-    "index = mlflow.pyfunc.load_model(model_uri)\n",
+    "pyfunc_model = mlflow.pyfunc.load_model(model_uri)\n",
     "query_response = index.predict(\"hi\")\n",
     "print(query_response)\n",
     "\n",
