--- a/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
+++ b/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "%pip install mlflow llama-index -q"
+    "%pip install mlflow>=2.15 llama-index>=0.10.44 -q"
    ]
   },
   {
