--- a/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
+++ b/docs/source/llms/llama-index/notebooks/llama_index_quickstart.ipynb
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "mlflow.llama_index.autolog()\n",
+    "mlflow.llama_index.autolog() # This is for enabling tracing\n",
     "\n",
     "with mlflow.start_run() as run:\n",
     "    mlflow.llama_index.log_model(\n",
