Update ruff to 0.4.10 #12470
Signed-off-by: Faizan Shaikh <8406903+faizankshaikh@users.noreply.github.com>

--- a/examples/sklearn_elasticnet_wine/train.ipynb
+++ b/examples/sklearn_elasticnet_wine/train.ipynb
@@ -88,9 +88,9 @@
     "\n",
     "        # Print out metrics\n",
     "        print(f\"Elasticnet model (alpha={alpha:f}, l1_ratio={l1_ratio:f}):\")\n",
-    "        print(\"  RMSE: %s\" % rmse)\n",
-    "        print(\"  MAE: %s\" % mae)\n",
-    "        print(\"  R2: %s\" % r2)\n",
+    "        print(f\"  RMSE: {rmse}\")\n",
+    "        print(f\"  MAE: {mae}\")\n",
+    "        print(f\"  R2: {r2}\")\n",
     "\n",
     "        # Infer model signature\n",
     "        predictions = lr.predict(train_x)\n",
