Update examples and tutorials for generate_signature_output
Signed-off-by: Kaung Myat Htet <kaungmyathtet.dev@gmail.com>

--- a/docs/docs/llms/llm-evaluate/notebooks/huggingface-evaluation.ipynb
+++ b/docs/docs/llms/llm-evaluate/notebooks/huggingface-evaluation.ipynb
@@ -130,18 +130,12 @@
    "source": [
     "mlflow.set_experiment(\"Evaluate Hugging Face Text Pipeline\")\n",
     "\n",
-    "# Define the signature\n",
-    "signature = mlflow.models.infer_signature(\n",
-    "    model_input=\"What are the three primary colors?\",\n",
-    "    model_output=\"The three primary colors are red, yellow, and blue.\",\n",
-    ")\n",
-    "\n",
     "# Log the model using mlflow\n",
     "with mlflow.start_run():\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=mpt_pipeline,\n",
     "        artifact_path=\"mpt-7b\",\n",
-    "        signature=signature,\n",
+    "        input_example=\"What are the three primary colors?\",\n",
     "        registered_model_name=\"mpt-7b-chat\",\n",
     "    )"
    ]
