--- a/docs/docs/llms/transformers/tutorials/audio-transcription/whisper.ipynb
+++ b/docs/docs/llms/transformers/tutorials/audio-transcription/whisper.ipynb
@@ -255,18 +255,7 @@
     "model_config = {\n",
     "    \"chunk_length_s\": 20,\n",
     "    \"stride_length_s\": [5, 3],\n",
-    "}\n",
-    "\n",
-    "# Define the model signature by using the input and output of our pipeline, as well as specifying our inference parameters that will allow for those parameters to\n",
-    "# be overridden at inference time.\n",
-    "signature = mlflow.models.infer_signature(\n",
-    "    audio,\n",
-    "    mlflow.transformers.generate_signature_output(audio_transcription_pipeline, audio),\n",
-    "    params=model_config,\n",
-    ")\n",
-    "\n",
-    "# Visualize the signature\n",
-    "signature"
+    "}"
    ]
   },
   {
@@ -335,9 +324,7 @@
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=audio_transcription_pipeline,\n",
     "        artifact_path=\"whisper_transcriber\",\n",
-    "        signature=signature,\n",
-    "        input_example=audio,\n",
-    "        model_config=model_config,\n",
+    "        input_example=(audio, model_config),\n",
     "        # Since MLflow 2.11.0, you can save the model in 'reference-only' mode to reduce storage usage by not saving\n",
     "        # the base model weights but only the reference to the HuggingFace model hub. To enable this, uncomment the\n",
     "        # following line:\n",
