--- a/docs/docs/llms/transformers/tutorials/prompt-templating/prompt-templating.ipynb
+++ b/docs/docs/llms/transformers/tutorials/prompt-templating/prompt-templating.ipynb
@@ -177,15 +177,7 @@
     "import mlflow\n",
     "\n",
     "sample_input = \"Tell me the largest bird\"\n",
-    "params = {\"max_new_tokens\": 15}\n",
-    "signature = mlflow.models.infer_signature(\n",
-    "    sample_input,\n",
-    "    mlflow.transformers.generate_signature_output(generator, sample_input, params=params),\n",
-    "    params=params,\n",
-    ")\n",
-    "\n",
-    "# visualize the signature\n",
-    "signature"
+    "params = {\"max_new_tokens\": 15}"
    ]
   },
   {
@@ -235,8 +227,7 @@
     "        transformers_model=generator,\n",
     "        artifact_path=\"model\",\n",
     "        task=\"text-generation\",\n",
-    "        signature=signature,\n",
-    "        input_example=\"Tell me the largest bird\",\n",
+    "        input_example=(sample_input, params),\n",
     "        prompt_template=prompt_template,\n",
     "        # Since MLflow 2.11.0, you can save the model in 'reference-only' mode to reduce storage usage by not saving\n",
     "        # the base model weights but only the reference to the HuggingFace model hub. To enable this, uncomment the\n",
