--- a/docs/docs/llms/transformers/tutorials/text-generation/text-generation.ipynb
+++ b/docs/docs/llms/transformers/tutorials/text-generation/text-generation.ipynb
@@ -159,39 +159,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "inputs: \n",
-       "  [string]\n",
-       "outputs: \n",
-       "  [string]\n",
-       "params: \n",
-       "  ['max_length': long (default: 512), 'do_sample': boolean (default: True), 'temperature': double (default: 0.4)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Generate the signature for the model that will be used for inference validation and type checking (as well as validation of parameters being submitted during inference)\n",
-    "signature = mlflow.models.infer_signature(\n",
-    "    input_example,\n",
-    "    mlflow.transformers.generate_signature_output(generation_pipeline, input_example),\n",
-    "    parameters,\n",
-    ")\n",
-    "\n",
-    "# Visualize the signature\n",
-    "signature"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -259,8 +226,9 @@
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=generation_pipeline,\n",
     "        artifact_path=\"text_generator\",\n",
-    "        input_example=input_example,\n",
-    "        signature=signature,\n",
+    "        input_example=(input_example, parameters),\n",
+    "        # Transformer model does not use Pandas Dataframe as input, internal input type conversion should be skipped.\n",
+    "        example_no_conversion=True,\n",
     "        # Uncomment the following line to save the model in 'reference-only' mode:\n",
     "        # save_pretrained=False,\n",
     "    )"
