--- a/docs/docs/llms/transformers/tutorials/translation/component-translation.ipynb
+++ b/docs/docs/llms/transformers/tutorials/translation/component-translation.ipynb
@@ -197,14 +197,7 @@
    "outputs": [],
    "source": [
     "# Define the parameters that we are permitting to be used at inference time, along with their default values if not overridden\n",
-    "model_params = {\"max_length\": 1000}\n",
-    "\n",
-    "# Generate the model signature by providing an input, the expected output, and (optionally), parameters available for overriding at inference time\n",
-    "signature = mlflow.models.infer_signature(\n",
-    "    \"This is a sample input sentence.\",\n",
-    "    mlflow.transformers.generate_signature_output(translation_pipeline, \"This is another sample.\"),\n",
-    "    params=model_params,\n",
-    ")"
+    "model_params = {\"max_length\": 1000}"
    ]
   },
   {
@@ -223,32 +216,6 @@
     "\n",
     "Reviewing the signature through the `signature` command allows us to validate the data formats and ensure that our model will function as expected when deployed. This step is vital for consistent model performance and avoiding errors in a production environment.\n",
     "Furthermore, the inclusion of parameters in the signature with default values ensures that any modifications during inference are deliberate and well-documented, contributing to the model's predictability and transparency."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "inputs: \n",
-       "  [string]\n",
-       "outputs: \n",
-       "  [string]\n",
-       "params: \n",
-       "  ['max_length': long (default: 1000)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Visualize the model signature\n",
-    "signature"
    ]
   },
   {
@@ -318,8 +285,7 @@
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=translation_pipeline,\n",
     "        artifact_path=\"french_translator\",\n",
-    "        signature=signature,\n",
-    "        model_params=model_params,\n",
+    "        input_example=(\"This is a sample input sentence.\", model_params),\n",
     "    )"
    ]
   },
